--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-simple-gauge": "^0.3.1",
-    "@react-native-community/art": ""
+    "@react-native-community/art": "",
+    "react-native-progress-circle": ""
   },
   "devDependencies": {
     "@babel/core": "7.17.2",
