--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactnative",
+  "name": "navigator",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,14 +10,19 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
+    "art": "^0.10.3",
     "react": "17.0.2",
     "react-native": "0.67.2",
+    "react-native-progress-circle": "^2.1.0",
+    "react-native-safe-area-context": "^3.4.1",
+    "react-native-screens": "^3.12.0",
     "react-native-simple-gauge": "^0.3.1",
-    "@react-native-community/art": "",
-    "react-native-progress-circle": ""
+    "@react-native-community/art": ""
   },
   "devDependencies": {
-    "@babel/core": "7.17.2",
+    "@babel/core": "7.17.5",
     "@babel/runtime": "7.17.2",
     "@react-native-community/eslint-config": "2.0.0",
     "babel-jest": "26.6.3",
